# ros-trace-ai

./: .gitignore  DEVPOST.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-07-15-ros-trace-ai.md
src/ros_trace_ai/: __init__.py  ai.py  analyzer.py  app.py
src/ros_trace_ai/static/: app.js  index.html  styles.css
tests/: test_ai.py  test_analyzer.py  test_api.py  test_browser_e2e.py  test_static_ui.py
