[project]
name = "ros-trace-ai"
version = "0.1.0"
description = "AI-assisted ROS log triage for robotics developers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.116.0",
  "openai>=1.95.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
]

[project.scripts]
ros-trace-ai = "ros_trace_ai.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ros_trace_ai"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
